--- a/getinvolved.html
+++ b/getinvolved.html
@@ -26,7 +26,8 @@
 
         <button class="hamburger hidden" id="hamburger">
             <!--Source: (personal design) Amanda Pinto-->
-            <img src="images/hamburger-icon.png" alt="Hamburger Menu Icon" aria-label="show navigation" width="1434" height="1017">
+            <img src="images/hamburger-icon.png" alt="Hamburger Menu Icon" aria-label="show navigation" width="1434"
+                height="1017">
         </button>
 
         <nav class="navbar" id="navbar">
@@ -57,7 +58,10 @@
 
         <div class="content">
             <h3>Join as a <strong>General Body Member</strong> to attend events and earn points!</h3>
-            <p>General Body Members with the most points and who have gotten to know the E-board/Raisers on a closer level will be selected to go through training with Guiding Eyes (once per semester).</p>
+            <p>General Body members come to our events such as pet a puppies and general body events and engage with our
+                dogs in a more informal context. At the end of every semester, General Body Members with the most points
+                and who have gotten to know the E-board/Raisers on a closer level will be selected to go through
+                training with Guiding Eyes.</p>
         </div>
     </div>
 
@@ -67,8 +71,10 @@
         </picture>
 
         <div class="content">
-            <h3>Once you have completed training, you are eligible to become a <strong>Sitter</strong>.</h3>
-            <p>As a sitter, you can work with the dogs as per your schedule for varying hours per week and help out raisers by taking care of a dog during your free time.</p>
+            <h3>Once you have completed training, you become a <strong>Cornell Sitter</strong>.</h3>
+            <p>As a sitter, you can work with the dogs as per your schedule for varying hours per week and help out
+                raisers by taking care of a dog during your free time. Some sitters choose to have dogs in class with
+                them, or even overnight on occasion.</p>
         </div>
     </div>
 
@@ -79,22 +85,36 @@
 
         <div class="content">
             <h3>After sitting for one semester, you are eligible to become a <strong>Raiser</strong>.</h3>
-            <p>Raisers provide a home to the dog, teach the dog good social skills and house manners, and communicate with Guiding Eyes for the Blind to ensure the success of the future guide dog. From skills like nail clipping to walking nicely on a leash, raisers show dogs how they are expected to act, preparing a confident and people loving puppy for his future work. Being a raiser at Cornell means you also must bring your dogs to events including pet a puppies and general body meetings, along with helping to train our new sitters.</p>
+            <p>Raisers provide a home to the dog, teach the dog good social skills and house manners, and communicate
+                with Guiding Eyes for the Blind to ensure the success of the future guide dog. From skills like nail
+                clipping to walking nicely on a leash, raisers show dogs how they are expected to act, preparing a
+                confident and people-loving puppy for their future work. Being a raiser at Cornell means you also must
+                bring your dogs to events including pet a puppies and general body meetings, along with helping to train
+                our new sitters.</p>
         </div>
     </div>
 
     <div class="process">
         <h1 class="process blue">Learn More About The General Guiding Eyes Process</h1>
-        <div class = "accordion_list">
+        <div class="accordion_list">
             <div class="accordion-header-info">
                 <div class="accordion-header">
                     <h3 class="header-title">Breeding and Early Development</h3>
                     <button class="drop" id="dropbutton-1" aria-label="show information">&#8964;</button>
                 </div>
-                <div class ="accordion-info-breed accessible-hidden">
-                    <p>As a global leader in breeding and genetics, <strong>Guiding Eyes employs industry best practices</strong> in their approach to continually improving the health, temperament, and success of our dogs. Their <strong>data-driven approach</strong>, together with their <strong>partnerships with other guide dog organizations, specialists, and universities</strong> helps to promote <strong>genetic diversity</strong> and ensure that each generation of dogs is better than the one before.<p>
+                <div class="accordion-info-breed accessible-hidden">
+                    <p>As a global leader in breeding and genetics, <strong>Guiding Eyes employs industry best
+                            practices</strong> in their approach to continually improving the health, temperament, and
+                        success of our dogs. Their <strong>data-driven approach</strong>, together with their
+                        <strong>partnerships with other guide dog organizations, specialists, and universities</strong>
+                        helps to promote <strong>genetic diversity</strong> and ensure that each generation of dogs is
+                        better than the one before.
+                    <p>
 
-                    <p>Guiding Eyes staff in the Genetics & Breeding department utilize data, called <strong>Estimated Breeding Values</strong>, to determine which dogs join the breeding program to produce the next generation of guide dogs and to match broods (moms) and studs (dads) together for litters by taking into account a variety of variables.</p>
+                    <p>Guiding Eyes staff in the Genetics & Breeding department utilize data, called <strong>Estimated
+                            Breeding Values</strong>, to determine which dogs join the breeding program to produce the
+                        next generation of guide dogs and to match broods (moms) and studs (dads) together for litters
+                        by taking into account a variety of variables.</p>
                     <!-- Source: Guiding Eyes Organization Website https://www.guidingeyes.org/journey-of-a-guide-dog/breeding-and-genetics/ -->
                 </div>
             </div>
@@ -104,11 +124,19 @@
                     <h3 class="header-title">Socialization and Raiser Training</h3>
                     <button class="drop" id="dropbutton-2" aria-label="show information">&#8964;</button>
                 </div>
-                <div class ="accordion-info-social accessible-hidden">
-                    <p>Volunteers take groups of puppies for <strong>home socialization</strong>. The Early Training & Socialization Program is a crucial program that helps the puppies get the right start on the long path to becoming guide dogs. An Early Socializer works with the puppy, introducing them to new environments and experiences. These repeated positive new experiences help the pups build confidence and develop simple, yet important, skills.</p>
+                <div class="accordion-info-social accessible-hidden">
+                    <p>Volunteers take groups of puppies for <strong>home socialization</strong>. The Early Training &
+                        Socialization Program is a crucial program that helps the puppies get the right start on the
+                        long path to becoming guide dogs. An Early Socializer works with the puppy, introducing them to
+                        new environments and experiences. These repeated positive new experiences help the pups build
+                        confidence and develop simple, yet important, skills.</p>
                     <!-- Source: Guiding Eyes Organization Website https://www.guidingeyes.org/early-training-socialization/ -->
-                    <p>Puppies are then matched to interested raisers <strong>(At Cornell, we train you to become a raiser, as mentioned above).</strong></p>
-                    <p>Raisers pick up an 8-12 week old puppy. The raiser then has the puppy for around 1.5 years (you can also “start” or “finish” dogs). At 4 months, the puppies have a Walk and Talk Test to get a vest. At 10 months, the puppies have another Walk and Talk Test to try on their harness for the first time.They then have another check in at 13 months.</p>
+                    <p>Puppies are then matched to interested raisers <strong>(At Cornell, we train you to become a
+                            sitter or a raiser, as mentioned above).</strong></p>
+                    <p>Raisers pick up an 8-12 week old puppy. The raiser then has the puppy for around 1.5 years (you
+                        can also “start” or “finish” dogs). At 4 months, the puppies have a Walk and Talk Test to get a
+                        vest. At 10 months, the puppies have another Walk and Talk Test to try on their harness for the
+                        first time.They then have another check in at 13 months.</p>
                 </div>
             </div>
 
@@ -117,26 +145,36 @@
                     <h3 class="header-title">Potential Paths for Trained Dogs</h3>
                     <button class="drop" id="dropbutton-3" aria-label="show information">&#8964;</button>
                 </div>
-                <div class ="accordion-info-path accessible-hidden">
-                    <p>The puppy goes back to Guiding Eyes for its <strong>In-For Training (IFT) Evaluation.</strong></p>
+                <div class="accordion-info-path accessible-hidden">
+                    <p>The puppy goes back to Guiding Eyes for its <strong>In-For Training (IFT) Evaluation.</strong>
+                    </p>
                     <p>The dog may potentially put on breed evaluation to <strong>become a breed dog</strong>.</p>
-                <ul>
-                    <li>If dog does not show a willingness to work, the dog is “released and <strong>offered to therapists as a therapy dog”, police departments as a police dog, and then back to raiser for adoption</strong>. If raiser does not adopt, there is <strong>a giant waiting list of people interested in adoption</strong>.</li>
-                    <li>If dog shows a willingness to work, it finishes training at Guiding Eyes. If it successfully completes the rest of the training (some get released during training), <strong>the dog gets matched to a blind person, graduates, and works!</strong></li>
-                </ul>
+                    <ul>
+                        <li>If dog does not show a willingness to work, the dog is “released and <strong>offered to
+                                therapists as a therapy dog”, police departments as a police dog, and then back to
+                                raiser for adoption</strong>. If raiser does not adopt, there is <strong>a giant waiting
+                                list of people interested in adoption</strong>.</li>
+                        <li>If dog shows a willingness to work, it finishes training at Guiding Eyes. If it successfully
+                            completes the rest of the training (some get released during training), <strong>the dog gets
+                                matched to a blind person, graduates, and works!</strong></li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
 
-    <p class="contact">To express interest or for more information, please contact Casey Dies, <a aria-label="link to create email to president" href="mailto:ced243@cornell.edu">ced243@cornell.edu</a><p></p>
+    <p class="contact">To express interest or for more information, please contact Casey Dies, <a
+            aria-label="link to create email to president" href="mailto:ced243@cornell.edu">ced243@cornell.edu</a>
+    <p></p>
 
     <!-- Footer -->
     <div class="footer">
         <p>This organization is a registered student organization of Cornell University.</p>
 
         <a href="https://www.instagram.com/guidingeyesatcornell/">
-            <img src="images/instagram.png" width="512" height="512" alt="instagram logo that can be clicked to direct to organization's instagram page" aria-label="click for guiding eyes instagram page">
+            <img src="images/instagram.png" width="512" height="512"
+                alt="instagram logo that can be clicked to direct to organization's instagram page"
+                aria-label="click for guiding eyes instagram page">
         </a>
     </div>
     <!-- Icon Sources: From https://www.flaticon.com/, open source icons for public use -->
@@ -146,4 +184,5 @@
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/accordion.js"></script>
 </body>
+
 </html>
