--- a/events.html
+++ b/events.html
@@ -270,7 +270,7 @@
                 href="mailto:guidingeyes@cornell.edu">guidingeyes@cornell.edu</a> with details of your event
             (organization, date, time, brief description)</h3>
         <ul>
-            <li>Our marketing chair will get back to you as soon as possible, letting you know if we can attend.</li>
+            <li>Our fundraising chair will get back to you as soon as possible, letting you know if we can attend.</li>
             <li>You reserve the room.</li>
             <li>We coordinate the dogs.</li>
             <li><strong>Pricing:</strong> Generally $40/hour or a portion of donations if it is a charity event</li>
