--- a/events.html
+++ b/events.html
@@ -62,18 +62,15 @@
         <h1>Upcoming Events</h1>
 
         <ul>
-            <li>
-                <h3>Pet-a-Puppy with Panhellenic</h3>
+            <!-- <li>
+                <h3>EVENT NAME</h3>
 
-                <p>Join us for an event that combines the joy of furry companionship with the spirit of
-                    sisterhood—Pet-a-Puppy with Panhellenic! This unique and heartwarming experience brings together
-                    members of the Panhellenic community for a day filled with adorable puppies, laughter, and
-                    unforgettable moments.</p>
+                <p>EVENT DESCRIPTION</p>
 
-                <p><strong>Date and Time:</strong> Monday, December 4, 2:00pm - 4:00pm</p>
+                <p><strong>Date and Time: </strong>EVENT DATE AND TIME</p>
 
-                <p><strong>Location:</strong> WSH Music Room</p>
-            </li>
+                <p><strong>Location: </strong>EVENT LOCATION</p>
+            </li> -->
 
             <li>
                 <h3>Pet-a-Puppy with CALS Zone</h3>
@@ -95,6 +92,56 @@
 
     <div id="past-content" class="event hidden">
         <h1>Past Events</h1>
+
+        <!-- <div class="event-past">
+            <figure class="event_NAME">
+                <img src="images/IMG_NAME" alt="Event page picture past 1" width="225" height="225">
+            </figure>
+
+            <ul>
+                <li>
+                    <h3>EVENT NAME</h3>
+                </li>
+                <li>EVENT DESCRIPTION</li>
+                <li><strong>Time: </strong>EVENT DATE AND TIME</li>
+                <li><strong>Location: </strong>EVENT LOCATION</li>
+            </ul>
+        </div> -->
+
+        <!-- <div class="event-past">
+            <figure class="event_calszone">
+                <img src="images/event_calszone.jpeg" alt="Event page picture past 1" width="225" height="225">
+            </figure>
+
+            <ul>
+                <li>
+                    <h3>Pet-A-Puppy with CALS Zone</h3>
+                </li>
+                <li>Join us for an event with the one and only CALS Zone. Come pet some puppies and destress before
+                    finals!</li>
+                <li><strong>Time:</strong> Tuesday, December 5, 12:00pm - 1:00pm</li>
+                <li><strong>Location:</strong> CALS Zone (Mann Library)</li>
+            </ul>
+        </div> -->
+
+        <div class="event-past">
+            <figure class="event_phc">
+                <img src="images/event_phc.jpeg" alt="Event page picture past 1" width="225" height="225">
+                <!--Source: Instagram sources provided by our clients-->
+            </figure>
+
+            <ul>
+                <li>
+                    <h3>Puppies and Pizza with Panhellenic</h3>
+                </li>
+                <li>Join us for an event that combines the joy of furry companionship with the spirit of
+                    sisterhood—Pet-a-Puppy with Panhellenic! This unique and heartwarming experience brings together
+                    members of the Panhellenic community for an event filled with adorable puppies, laughter, and
+                    pizza.</li>
+                <li><strong>Time:</strong> Monday, December 4, 2:00pm - 4:00pm</li>
+                <li><strong>Location:</strong> Willard Straight Music Room</li>
+            </ul>
+        </div>
 
         <div class="event-past">
             <figure class="event_gbm4">
