Update contact info

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -163,8 +163,9 @@
         </div>
     </div>
 
-    <p class="contact">To express interest or for more information, please contact Casey Dies, <a
-            aria-label="link to create email to president" href="mailto:ced243@cornell.edu">ced243@cornell.edu</a>
+    <p class="contact">To express interest or for more information, please contact us at <a
+            aria-label="link to create email to president"
+            href="mailto:guidingeyes@cornell.edu">guidingeyes@cornell.edu</a>
     <p></p>
 
     <!-- Footer -->
