--- a/events.html
+++ b/events.html
@@ -32,7 +32,7 @@
 
         <nav class="navbar" id="navbar">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">About Us</a></li>
                 <li><a href="getinvolved.html">Get Involved</a></li>
                 <li><a href="dogs.html">Our Dogs</a></li>
                 <li><a href="events.html">Events</a></li>
@@ -42,7 +42,7 @@
 
     <nav class="navmenu hidden" id="navmenu">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">About Us</a></li>
             <li><a href="getinvolved.html">Get Involved</a></li>
             <li><a href="dogs.html">Our Dogs</a></li>
             <li><a href="events.html">Events</a></li>
