--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="styles/site.css">
     <link rel="icon" href="images/favicon.png">
 </head>
@@ -26,12 +26,13 @@
 
         <button class="hamburger hidden" id="hamburger">
             <!--Source: (personal design) Amanda Pinto-->
-            <img src="images/hamburger-icon.png" alt="Hamburger Menu Icon" aria-label="show navigation" width="1434" height="1017">
+            <img src="images/hamburger-icon.png" alt="Hamburger Menu Icon" aria-label="show navigation" width="1434"
+                height="1017">
         </button>
 
         <nav class="navbar" id="navbar">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">About Us</a></li>
                 <li><a href="getinvolved.html">Get Involved</a></li>
                 <li><a href="dogs.html">Our Dogs</a></li>
                 <li><a href="events.html">Events</a></li>
@@ -41,7 +42,7 @@
 
     <nav class="navmenu hidden" id="navmenu">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">About Us</a></li>
             <li><a href="getinvolved.html">Get Involved</a></li>
             <li><a href="dogs.html">Our Dogs</a></li>
             <li><a href="events.html">Events</a></li>
@@ -50,7 +51,8 @@
 
     <div class="welcome">
         <h1 class="blue">Welcome to Guiding Eyes at Cornell</h1>
-        <p>Building a community of guide dogs and raisers at Cornell under the Guiding Eyes for the Blind Organization!</p>
+        <p>Building a community of guide dogs and raisers at Cornell under the Guiding Eyes for the Blind Organization!
+        </p>
         <p><a href="getinvolved.html">Join Our Community</a></p>
     </div>
 
@@ -61,15 +63,15 @@
 
         <!-- Full-width images with number and caption text -->
         <div class="slide on fade" id="slide1">
-          <img src="images/dogs_raisers.JPEG" alt="Dog Raisers Together">
+            <img src="images/dogs_raisers.JPEG" alt="Dog Raisers Together">
         </div>
 
         <div class="slide accessible-hidden" id="slide2">
-          <img src="images/dogs.jpeg" alt="Image of 3 Guide Dogs">
+            <img src="images/dogs.jpeg" alt="Image of 3 Guide Dogs">
         </div>
 
         <div class="slide accessible-hidden" id="slide3">
-          <img src="images/club.JPEG" alt="Image of all senior club members">
+            <img src="images/club.JPEG" alt="Image of all senior club members">
         </div>
 
         <button class="next" id="nextbutton" aria-label="show next slide">&#10095;</button>
@@ -79,21 +81,29 @@
         <button class="dot active" id="dot1"></button>
         <button class="dot" id="dot2"></button>
         <button class="dot" id="dot3"></button>
-      </div>
+    </div>
 
     <!-- Mission -->
 
     <section class="mission">
         <h3>The Guiding Eyes for the Blind: Mission</h3>
-        <p>Guiding Eyes for the Blind provides guide dogs to people with vision loss. They are passionate about connecting exceptional dogs with individuals for greater independence in their day-to-day lives, and simultaneously inspires others to help make these life changing connections possible.</p>
+        <p>Guiding Eyes for the Blind provides guide dogs to people with vision loss. They are passionate about
+            connecting exceptional dogs with individuals for greater independence in their day-to-day lives, and
+            simultaneously inspires others to help make these life changing connections possible.</p>
     </section>
 
     <section class="intro">
-        <p>Guiding Eyes has nearly <strong>70</strong> years of experience in providing guide dogs to people with vision loss.  They estimate that more than <strong>10000</strong> service dog teams have graduated since their founding in 1954.  Approximately <strong>100</strong> guide dogs are placed annually, and more than <strong>1700</strong> volunteers support their mission.</p>
+        <p>Guiding Eyes has nearly <strong>70</strong> years of experience in providing guide dogs to people with vision
+            loss. They estimate that more than <strong>10000</strong> service dog teams have graduated since their
+            founding in 1954. Approximately <strong>100</strong> guide dogs are placed annually, and more than
+            <strong>1700</strong> volunteers support their mission.
+        </p>
 
-        <p class="blue">Each Guiding Eyes graduate has a unique story of life changing events, challenges,  determination, and triumph.</p>
+        <p class="blue">Each Guiding Eyes graduate has a unique story of life changing events, challenges,
+            determination, and triumph.</p>
 
-        <p>Learn more and donate at <a class="blue" href="https://www.guidingeyes.org/" aria-label="link to guiding eyes organization page">https://www.guidingeyes.org/</a></p>
+        <p>Learn more and donate at <a class="blue" href="https://www.guidingeyes.org/"
+                aria-label="link to guiding eyes organization page">https://www.guidingeyes.org/</a></p>
     </section>
 
     <section class="mission">
@@ -101,7 +111,8 @@
         <ul>
             <li>Work with Guiding Eyes for the Blind, specifically the Fingerlakes Region</li>
             <li>Host fundraisers to raise money and awareness for Guiding Eyes for the Blind</li>
-            <li>Provide a network of sitters for dogs being raised in our region - prioritizing sitters for our Cornell dogs</li>
+            <li>Provide a network of sitters for dogs being raised in our region - prioritizing sitters for our Cornell
+                dogs</li>
             <li>Raise dogs! Multiple dogs are currently being raised by undergraduate students on campus</li>
         </ul>
     </section>
@@ -154,17 +165,21 @@
         </div>
     </div>
 
-    <p class="contact">To express interest or for more information, please contact Casey Dies, <a aria-label="link to create email to president" href="mailto:ced243@cornell.edu">ced243@cornell.edu</a><p>
+    <p class="contact">To express interest or for more information, please contact Casey Dies, <a
+            aria-label="link to create email to president" href="mailto:ced243@cornell.edu">ced243@cornell.edu</a>
+    <p>
 
-    <!-- Images Source: Client Provided, owned and shot by Guiding Eyes at Cornell -->
-    <!-- TEXT Source: Client Provided, owned by Guiding Eyes at Cornell, edited by our team -->
+        <!-- Images Source: Client Provided, owned and shot by Guiding Eyes at Cornell -->
+        <!-- TEXT Source: Client Provided, owned by Guiding Eyes at Cornell, edited by our team -->
 
-    <!-- Footer -->
+        <!-- Footer -->
     <div class="footer">
         <p>This organization is a registered student organization of Cornell University.</p>
 
         <a href="https://www.instagram.com/guidingeyesatcornell/">
-            <img src="images/instagram.png" width="512" height="512" alt="instagram logo that can be clicked to direct to organization's instagram page" aria-label="click for guiding eyes instagram page">
+            <img src="images/instagram.png" width="512" height="512"
+                alt="instagram logo that can be clicked to direct to organization's instagram page"
+                aria-label="click for guiding eyes instagram page">
         </a>
     </div>
 
