--- a/events.html
+++ b/events.html
@@ -73,15 +73,10 @@
             </li> -->
 
             <li>
-                <h3>Pet-a-Puppy with CALS Zone</h3>
+                <h3>No Upcoming Events!</h3>
 
-                <p>Join us for an event with the one and only CALS Zone. Come pet some puppies and destress before
-                    finals!
+                <p>Join us next semester for our coming events. Our pups can't wait to meet you!
                 </p>
-
-                <p><strong>Date and Time:</strong> Tuesday, December 5, 12:00pm - 1:00pm</p>
-
-                <p><strong>Location:</strong> CALS Zone</p>
             </li>
         </ul>
     </div>
@@ -108,7 +103,7 @@
             </ul>
         </div> -->
 
-        <!-- <div class="event-past">
+        <div class="event-past">
             <figure class="event_calszone">
                 <img src="images/event_calszone.jpeg" alt="Event page picture past 1" width="225" height="225">
             </figure>
@@ -122,7 +117,7 @@
                 <li><strong>Time:</strong> Tuesday, December 5, 12:00pm - 1:00pm</li>
                 <li><strong>Location:</strong> CALS Zone (Mann Library)</li>
             </ul>
-        </div> -->
+        </div>
 
         <div class="event-past">
             <figure class="event_phc">
