--- a/index.html
+++ b/index.html
@@ -87,15 +87,14 @@
 
     <section class="mission">
         <h3>The Guiding Eyes for the Blind: Mission</h3>
-        <p>Guiding Eyes for the Blind provides guide dogs to people with vision loss. They are passionate about
-            connecting exceptional dogs with individuals for greater independence in their day-to-day lives, and
-            simultaneously inspires others to help make these life changing connections possible.</p>
+        <p>Guiding Eyes for the Blind provides guide dogs to people with vision loss. The organization is passionate
+            about connecting exceptional dogs with individuals for greater independence in their day-to-day lives.</p>
     </section>
 
     <section class="intro">
         <p>Guiding Eyes has nearly <strong>70</strong> years of experience in providing guide dogs to people with vision
-            loss. They estimate that more than <strong>10000</strong> service dog teams have graduated since their
-            founding in 1954. Approximately <strong>100</strong> guide dogs are placed annually, and more than
+            loss. It is estimated that more than <strong>10000</strong> service dog teams have graduated since the
+            founding of GEB in 1954. Approximately <strong>100</strong> guide dogs are placed annually, and more than
             <strong>1700</strong> volunteers support their mission.
         </p>
 
