--- a/dogs.html
+++ b/dogs.html
@@ -60,7 +60,7 @@
                 <div class="container">
                     <img src="images/dogs_tina.png"
                         alt="Tina - on hover, more details can be seen; (SP23 - Present), Raised by: Dana Matusewicz, Male Yellow Labrador">
-                    <p>Tina (ID: 1TT22)</p>
+                    <p>Tina (1TT22)</p>
                     <div class="overlay">
                         <h3>(SP23 - Present)</h3>
                         <h3>Raised by: Faith Bailey</h3>
@@ -73,7 +73,7 @@
                 <div class="container">
                     <img src="images/dogs_olmstead.png"
                         alt="Olmstead - on hover, more details can be seen; (SP23 - Present), Co-raised by: Emory Walsh and Casey Dies, Female Black Labrador">
-                    <p>Olmstead (ID: 5O322)</p>
+                    <p>Olmstead (5O322)</p>
                     <div class="overlay">
                         <h3>(SP23 - Present)</h3>
                         <h3>Raised by: Dana Matusewicz</h3>
@@ -86,10 +86,10 @@
                 <div class="container">
                     <img src="images/dogs_paisley.png"
                         alt="Paisley - on hover, more details can be seen; (SP23 - Present), Co-raised by: Emory Walsh and Casey Dies, Female Black Labrador">
-                    <p>Paisley (ID: 3P322)</p>
+                    <p>Paisley (3P322)</p>
                     <div class="overlay">
                         <h3>(SP23 - Present)</h3>
-                        <h3>Co-raised by: Emory Walsh and Casey Dies</h3>
+                        <h3>Co-raised by: Emory Walsh & Casey Dies</h3>
                         <h3>Female Black Labrador</h3>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                 <div class="container">
                     <img src="images/dogs_yoshiko.png"
                         alt="Yoshiko - on hover, more details can be seen; (SP23 - Present), Raised by: Jenna Gaglioti, Female Yellow Labrador">
-                    <p>Yoshiko (ID: 5Y322)</p>
+                    <p>Yoshiko (5Y322)</p>
                     <div class="overlay">
                         <h3>(SP23 - Present)</h3>
                         <h3>Raised by: Nadia Despradel Canela</h3>
@@ -115,11 +115,65 @@
                 <div class="container">
                     <img src="images/dogs_gino.png"
                         alt="Gino - on hover, more details can be seen; (FA23 - Present), Raised by: Oscar Minaya, Male Black Labrador">
-                    <p>Gino (ID: 6GG23)</p>
+                    <p>Gino (6GG23)</p>
                     <div class="overlay">
                         <h3>(FA23 - Present)</h3>
                         <h3>Raised by: Oscar Minaya</h3>
                         <h3>Male Black Labrador</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="container">
+                    <img src="images/dogs_keeper.jpg"
+                        alt="Keeper - on hover, more details can be seen; (SP24 - Present), Raised by: Rosie Hsu, Male Yellow Labrador">
+                    <p>Keeper (7KK23)</p>
+                    <div class="overlay">
+                        <h3>(SP24 - Present)</h3>
+                        <h3>Co-raised by: Rosie Hsu</h3>
+                        <h3>Male Yellow Labrador</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="container">
+                    <img src="images/dogs_yen.png"
+                        alt="Yen - on hover, more details can be seen; (SP24 - Present), Raised by: Rachel Craig and Evelyn Chiu, Male Black Labrador">
+                    <p>Yen (5YY23)</p>
+                    <div class="overlay">
+                        <h3>(SP24 - Present)</h3>
+                        <h3>Co-raised by: Rachel Craig & Evelyn Chiu</h3>
+                        <h3>Male Black Labrador</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="container">
+                    <img src="images/dogs_fianna.png"
+                        alt="Fianna - on hover, more details can be seen; (SP24 - Present), Raised by: Jenna Gaglioti, Female Black Labrador">
+                    <p>Fianna (3F322)</p>
+                    <div class="overlay">
+                        <h3>(SP24 - Present)</h3>
+                        <h3>Raised by: Jenna Gaglioti</h3>
+                        <h3>Female Black Labrador</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="dog-row">
+            <div>
+                <div class="container">
+                    <img src="images/dogs_melon.jpeg"
+                        alt="Melon - on hover, more details can be seen; (SP24 - Present), Raised by: Casey Dies & Emory Walsh, Female Yellow Labrador">
+                    <p>Melon (2M323)</p>
+                    <div class="overlay">
+                        <h3>(SP24 - Present)</h3>
+                        <h3>Co-raised by: Casey Dies & Emory Walsh</h3>
+                        <h3>Female Yellow Labrador</h3>
                     </div>
                 </div>
             </div>
@@ -132,7 +186,7 @@
                 <div class="container">
                     <img src="images/dogs_oak.png"
                         alt="Gino - on hover, more details can be seen; (FA22 - SP23), Co-raised by: Alyssa Roorda, Soon to take his IFT">
-                    <p>Oak (ID: 2O22)</p>
+                    <p>Oak (2O22)</p>
                     <div class="overlay">
                         <h3>(FA22 - SP23)</h3>
                         <h3>Co-raised by: Alyssa Roorda</h3>
@@ -145,7 +199,7 @@
                 <div class="container">
                     <img src="images/dog_herb.png"
                         alt="Herb - on hover, more details can be seen; (FA22 - Present), Raised by: Faith Bailey, Female Black Labrador">
-                    <p>Herb (ID: 5HH22)</p>
+                    <p>Herb (5HH22)</p>
                     <div class="overlay">
                         <h3>(FA22 - FA23)</h3>
                         <h3>Raised by: Jenna Gaglioti</h3>
@@ -158,7 +212,7 @@
                 <div class="container">
                     <img src="images/dogs_yacht.png"
                         alt="Yacht - on hover, more details can be seen; (FA20 - SP22), Co-raised by: Alyssa Roorda, Working as a guide dog in Louisiana">
-                    <p>Yacht (ID: 7Y20)</p>
+                    <p>Yacht (7Y20)</p>
                     <div class="overlay">
                         <h3>(FA20 - SP22)</h3>
                         <h3>Co-raised by: Alyssa Roorda</h3>
@@ -171,7 +225,7 @@
                 <div class="container">
                     <img src="images/dogs_verdi.png"
                         alt="Verdi - on hover, more details can be seen; (FA19 - SP21), Raised by: Michelle Robbins, Working as a guide dog">
-                    <p>Verdi (ID: 2V19)</p>
+                    <p>Verdi (2V19)</p>
                     <div class="overlay">
                         <h3>(FA19 - SP21)</h3>
                         <h3>Raised by: Michelle Robbins</h3>
