--- a/events.html
+++ b/events.html
@@ -57,7 +57,7 @@
             With Us</button>
     </div>
 
-    <!--Incoming Events-->
+    <!--Upcoming Events-->
     <div id="upcoming-content" class="event">
         <h1>Upcoming Events</h1>
 
@@ -73,10 +73,57 @@
             </li> -->
 
             <li>
-                <h3>No Upcoming Events!</h3>
+                <h3>ClubFest</h3>
 
-                <p>Join us next semester for our coming events. Our pups can't wait to meet you!
-                </p>
+                <p>Join us at ClubFest and talk to some of our sitters and raisers about their experiences as a part of
+                    Guiding
+                    Eyes at Cornell.</p>
+
+                <p><strong>Date and Time: </strong>Sunday, February 4th, 2:00pm - 4:00pm</p>
+
+                <p><strong>Location: </strong>Barton Hall</p>
+            </li>
+
+            <li>
+                <h3>General Body Meeting 1</h3>
+
+                <p>Our first general body meeting of the semester will be a general info session about the club where we
+                    welcome any questions. After, you'll have a chance to pet all of the pups and talk individually with
+                    our members.</p>
+
+                <p><strong>Date and Time: </strong>Wednesday, February 7th, 6:00pm - 6:00pm</p>
+
+                <p><strong>Location: </strong>TBD</p>
+            </li>
+
+            <li>
+                <h3>General Body Meeting 2</h3>
+
+                <p>Join our sitters, raisers, and pups for a fun and informative meeting.</p>
+
+                <p><strong>Date and Time: </strong>Wednesday, March 6th, 6:00pm - 6:00pm</p>
+
+                <p><strong>Location: </strong>TBD</p>
+            </li>
+
+            <li>
+                <h3>General Body Meeting 3</h3>
+
+                <p>Join our sitters, raisers, and pups for a fun and informative meeting.</p>
+
+                <p><strong>Date and Time: </strong>Wednesday, April 10th, 6:00pm - 6:00pm</p>
+
+                <p><strong>Location: </strong>TBD</p>
+            </li>
+
+            <li>
+                <h3>General Body Meeting 4</h3>
+
+                <p>Join our sitters, raisers, and pups for a fun and informative meeting.</p>
+
+                <p><strong>Date and Time: </strong>Wednesday, May 1st, 6:00pm - 6:00pm</p>
+
+                <p><strong>Location: </strong>TBD</p>
             </li>
         </ul>
     </div>
@@ -104,10 +151,6 @@
         </div> -->
 
         <div class="event-past">
-            <figure class="event_calszone">
-                <img src="images/event_calszone.jpeg" alt="Event page picture past 1" width="225" height="225">
-            </figure>
-
             <ul>
                 <li>
                     <h3>Pet-A-Puppy with CALS Zone</h3>
@@ -120,11 +163,6 @@
         </div>
 
         <div class="event-past">
-            <figure class="event_phc">
-                <img src="images/event_phc.jpeg" alt="Event page picture past 1" width="225" height="225">
-                <!--Source: Instagram sources provided by our clients-->
-            </figure>
-
             <ul>
                 <li>
                     <h3>Puppies and Pizza with Panhellenic</h3>
@@ -139,10 +177,10 @@
         </div>
 
         <div class="event-past">
-            <figure class="event_gbm4">
-                <img src="images/event_gbm4.jpg" alt="Event page picture past 1" width="225" height="225">
-                <!--Source: Instagram sources provided by our clients-->
-            </figure>
+            <!-- <figure class="event_gbm4">
+                <img src="images/event_gbm4.jpg" alt="Event page picture past 1" width="225" height="225"> -->
+            <!--Source: Instagram sources provided by our clients-->
+            <!-- </figure> -->
 
             <ul>
                 <li>
@@ -158,11 +196,6 @@
         </div>
 
         <div class="event-past">
-            <figure class="event_air">
-                <img src="images/event_air.png" alt="Event page picture past 1" width="225" height="225">
-                <!--Source: Instagram sources provided by our clients-->
-            </figure>
-
             <ul>
                 <li>
                     <h3>Pet a Puppy with AIR</h3>
@@ -175,11 +208,6 @@
         </div>
 
         <div class="event-past">
-            <figure class="event_gbm3">
-                <img src="images/event_gbm3.jpg" alt="Event page picture past 1" width="225" height="225">
-                <!--Source: Instagram sources provided by our clients-->
-            </figure>
-
             <ul>
                 <li>
                     <h3>General Body Meeting 3</h3>
@@ -193,11 +221,6 @@
         </div>
 
         <div class="event-past">
-            <figure class="event1">
-                <img src="images/event_donuts_and_doggos.png" alt="Event page picture past 1" width="225" height="225">
-                <!--Source: Instagram sources provided by our clients-->
-            </figure>
-
             <ul>
                 <li>
                     <h3>Donunts and Doggos</h3>
@@ -210,11 +233,6 @@
         </div>
 
         <div class="event-past">
-            <figure class="event5">
-                <img src="images/event_ears.png" alt="Event page picture past 5" width="225" height="225">
-                <!--Source: Instagram sources provided by our clients-->
-            </figure>
-
             <ul>
                 <li>
                     <h3>Puppies & Peer Mentoring with EARS</h3>
@@ -228,11 +246,6 @@
         </div>
 
         <div class="event-past">
-            <figure class="event5">
-                <img src="images/event_bmes.jpeg" alt="Event page picture past 5" width="225" height="225">
-                <!--Source: Instagram sources provided by our clients-->
-            </figure>
-
             <ul>
                 <li>
                     <h3>BMES</h3>
@@ -246,11 +259,6 @@
         </div>
 
         <div class="event-past">
-            <figure class="event4">
-                <img src="images/event_aap.png" alt="Event page picture past 4" width="225" height="225">
-                <!--Source: Instagram sources provided by our clients-->
-            </figure>
-
             <ul>
                 <li>
                     <h3>Pet-A-Puppy with AAP</h3>
@@ -265,11 +273,6 @@
         </div>
 
         <div class="event-past">
-            <figure class="event2">
-                <img src="images/event_gbm1.png" alt="Event page picture past 2" width="225" height="225">
-                <!--Source: Instagram sources provided by our clients-->
-            </figure>
-
             <ul>
                 <li>
                     <h3>Our First General Body</h3>
@@ -284,11 +287,6 @@
         </div>
 
         <div class="event-past">
-            <figure class="event_clubfest">
-                <img src="images/event_clubfest.png" alt="Event page picture past 3" width="225" height="225">
-                <!--Source: Instagram sources provided by our clients-->
-            </figure>
-
             <ul>
                 <li>
                     <h3>Clubfest</h3>
