--- a/events.html
+++ b/events.html
@@ -52,7 +52,6 @@
     <!-- Tab links -->
     <div class="tab">
         <button id="upcoming-button" class="white" aria-label="click for upcoming events">Upcoming Events</button>
-        <button id="past-button" class="red" aria-label="click for past events">Past Events</button>
         <button id="schedule-button" class="red" aria-label="click for how to schedule events with us">Schedule An Event
             With Us</button>
     </div>
@@ -73,234 +72,38 @@
             </li> -->
 
             <li>
-                <h3>ClubFest</h3>
-
-                <p>Join us at ClubFest and talk to some of our sitters and raisers about their experiences as a part of
-                    Guiding
-                    Eyes at Cornell.</p>
-
-                <p><strong>Date and Time: </strong>Sunday, February 4th, 2:00pm - 4:00pm</p>
-
-                <p><strong>Location: </strong>Barton Hall</p>
-            </li>
-
-            <li>
-                <h3>General Body Meeting 1</h3>
-
-                <p>Our first general body meeting of the semester will be a general info session about the club where we
-                    welcome any questions. After, you'll have a chance to pet all of the pups and talk individually with
-                    our members.</p>
-
-                <p><strong>Date and Time: </strong>Wednesday, February 7th, 6:00pm - 6:00pm</p>
-
-                <p><strong>Location: </strong>TBD</p>
-            </li>
-
-            <li>
                 <h3>General Body Meeting 2</h3>
 
-                <p>Join our sitters, raisers, and pups for a fun and informative meeting.</p>
+                <p>Join our sitters, raisers, and pups for a fun and informative meeting. Here, we will learn about the
+                    IFT (in for training) test that our pups take when they go back to GEB.</p>
 
-                <p><strong>Date and Time: </strong>Wednesday, March 6th, 6:00pm - 6:00pm</p>
+                <p><strong>Date and Time: </strong>Wednesday, March 6th, 5:00pm - 6:00pm</p>
 
-                <p><strong>Location: </strong>TBD</p>
+                <p><strong>Location: </strong>Goldwin Smit G76</p>
             </li>
 
             <li>
                 <h3>General Body Meeting 3</h3>
 
-                <p>Join our sitters, raisers, and pups for a fun and informative meeting.</p>
+                <p>Join our sitters, raisers, and pups for a relaxing meeting. We'll be making dog toys! Come, chat, and
+                    make a tug toy for your dog or for one of our pups!</p>
 
-                <p><strong>Date and Time: </strong>Wednesday, April 10th, 6:00pm - 6:00pm</p>
+                <p><strong>Date and Time: </strong>Wednesday, April 10th, 5:00pm - 6:00pm</p>
 
-                <p><strong>Location: </strong>TBD</p>
+                <p><strong>Location: </strong>Malott 228</p>
             </li>
 
             <li>
                 <h3>General Body Meeting 4</h3>
 
-                <p>Join our sitters, raisers, and pups for a fun and informative meeting.</p>
+                <p>Come and hear from Emma Vrabel, a junior at Harvard who was matched with GEB Holly about a year ago.
+                </p>
 
-                <p><strong>Date and Time: </strong>Wednesday, May 1st, 6:00pm - 6:00pm</p>
+                <p><strong>Date and Time: </strong>Wednesday, May 1st, 5:00pm - 6:00pm</p>
 
-                <p><strong>Location: </strong>TBD</p>
+                <p><strong>Location: </strong>Malott 228</p>
             </li>
         </ul>
-    </div>
-
-
-    <!--Past Events-->
-
-
-    <div id="past-content" class="event hidden">
-        <h1>Past Events</h1>
-
-        <!-- <div class="event-past">
-            <figure class="event_NAME">
-                <img src="images/IMG_NAME" alt="Event page picture past 1" width="225" height="225">
-            </figure>
-
-            <ul>
-                <li>
-                    <h3>EVENT NAME</h3>
-                </li>
-                <li>EVENT DESCRIPTION</li>
-                <li><strong>Time: </strong>EVENT DATE AND TIME</li>
-                <li><strong>Location: </strong>EVENT LOCATION</li>
-            </ul>
-        </div> -->
-
-        <div class="event-past">
-            <ul>
-                <li>
-                    <h3>Pet-A-Puppy with CALS Zone</h3>
-                </li>
-                <li>Join us for an event with the one and only CALS Zone. Come pet some puppies and destress before
-                    finals!</li>
-                <li><strong>Time:</strong> Tuesday, December 5, 12:00pm - 1:00pm</li>
-                <li><strong>Location:</strong> CALS Zone (Mann Library)</li>
-            </ul>
-        </div>
-
-        <div class="event-past">
-            <ul>
-                <li>
-                    <h3>Puppies and Pizza with Panhellenic</h3>
-                </li>
-                <li>Join us for an event that combines the joy of furry companionship with the spirit of
-                    sisterhood—Pet-a-Puppy with Panhellenic! This unique and heartwarming experience brings together
-                    members of the Panhellenic community for an event filled with adorable puppies, laughter, and
-                    pizza.</li>
-                <li><strong>Time:</strong> Monday, December 4, 2:00pm - 4:00pm</li>
-                <li><strong>Location:</strong> Willard Straight Music Room</li>
-            </ul>
-        </div>
-
-        <div class="event-past">
-            <!-- <figure class="event_gbm4">
-                <img src="images/event_gbm4.jpg" alt="Event page picture past 1" width="225" height="225"> -->
-            <!--Source: Instagram sources provided by our clients-->
-            <!-- </figure> -->
-
-            <ul>
-                <li>
-                    <h3>General Body Meeting 4</h3>
-                </li>
-                <li>We are thrilled to invite you to our fourth General Body Meeting, a forum where your participation
-                    and insights play a vital role in shaping the trajectory of our organization. At this event we will
-                    be making toys for you to take home to your dogs, or to donate to the Guiding Eyes pups in the
-                    Fingerlakes region.</li>
-                <li><strong>Time:</strong> Tuesday, November 28, 5:00pm - 6:00pm</li>
-                <li><strong>Location:</strong> GSH G76</li>
-            </ul>
-        </div>
-
-        <div class="event-past">
-            <ul>
-                <li>
-                    <h3>Pet a Puppy with AIR</h3>
-                </li>
-                <li>Come see our puppies at a Pet a Puppy with Alpha Iota Gamma. Learn more about Guiding Eyes at
-                    Cornell and Alpha Iota Gamma at this fun and furry event.</li>
-                <li><strong>Time:</strong> Monday, November 27, 5:00pm - 6:00pm</li>
-                <li><strong>Location:</strong> Philips 203</li>
-            </ul>
-        </div>
-
-        <div class="event-past">
-            <ul>
-                <li>
-                    <h3>General Body Meeting 3</h3>
-                </li>
-                <li>Get ready for an engaging and informative session as we gear up for our third General Body Meeting!
-                    Your attendance is crucial as we discuss important updates, upcoming events, and hear your valuable
-                    input on the matters that shape our organization.</li>
-                <li><strong>Time:</strong> Tuesday, November 14, 5:00pm - 6:00pm</li>
-                <li><strong>Location:</strong> GSH G76</li>
-            </ul>
-        </div>
-
-        <div class="event-past">
-            <ul>
-                <li>
-                    <h3>Donunts and Doggos</h3>
-                </li>
-                <li>Get ready for our donut fundraiser with DSP, PGN, and AKPsi! We will have Dunkin Donuts for sale and
-                    puppies there for petting.</li>
-                <li><strong>Time:</strong> Tuesday November 14th, 2:30 pm - 4:30 pm</li>
-                <li><strong>Location:</strong> Willard Straight Memorial Room</li>
-            </ul>
-        </div>
-
-        <div class="event-past">
-            <ul>
-                <li>
-                    <h3>Puppies & Peer Mentoring with EARS</h3>
-                </li>
-                <li>Come pet some puppies at our upcoming event with EARS. There will be representatives present from
-                    both organizations to give you more info about what we do. Come and pet some furry friends and say
-                    hi to us.</li>
-                <li><strong>Time:</strong> Monday, November 13th, 5:00pm -7:00pm</li>
-                <li><strong>Location:</strong> Willard Straight Hall</li>
-            </ul>
-        </div>
-
-        <div class="event-past">
-            <ul>
-                <li>
-                    <h3>BMES</h3>
-                </li>
-                <li>Get ready for a paw-some experience at the BMES Dog Events! Whether you're a proud dog owner or just
-                    a dog enthusiast, join us for a day filled with wagging tails, furry friends, and boundless joy.
-                </li>
-                <li><strong>Time:</strong> Friday, November 10, 5:00pm - 6:00pm</li>
-                <li><strong>Location:</strong> Weill 226</li>
-            </ul>
-        </div>
-
-        <div class="event-past">
-            <ul>
-                <li>
-                    <h3>Pet-A-Puppy with AAP</h3>
-                </li>
-                <li>Get ready for a tail-wagging, heart-melting experience as GuideYes introduces a unique and virtual
-                    twist to the beloved tradition of petting puppies! Join us for "GuideYes Pet-a-Puppy with App," an
-                    innovative event that brings the joy of interacting with adorable guide dog puppies directly to your
-                    fingertips.</li>
-                <li><strong>Time:</strong> Tuesday, October 24th, 5:00pm -7:00pm</li>
-                <li><strong>Location:</strong> Under Milstein</li>
-            </ul>
-        </div>
-
-        <div class="event-past">
-            <ul>
-                <li>
-                    <h3>Our First General Body</h3>
-                </li>
-                <li>Embark on a transformative wellness journey as we unveil the inaugural event of GoBody, a
-                    groundbreaking platform dedicated to holistic health and well-being. Join us for an immersive
-                    experience that transcends traditional fitness events, promising an inspiring day filled with
-                    education, empowerment, and the celebration of personal wellness.</li>
-                <li><strong>Time:</strong> Tuesday, September 12, 5:00pm -6:00pm</li>
-                <li><strong>Location:</strong> Goldwin Smith Hall G76</li>
-            </ul>
-        </div>
-
-        <div class="event-past">
-            <ul>
-                <li>
-                    <h3>Clubfest</h3>
-                </li>
-                <li>Welcome to the Guiding Eyes at Cornell ClubFest booth—a vibrant celebration of empowerment,
-                    inclusion, and the
-                    extraordinary bond between guide dogs and their partners! Join us for a day filled with festivities,
-                    education, and the joyous spirit of community as we honor the life-changing impact of guide dogs.
-                </li>
-                <li><strong>Time:</strong> Sunday, September 10, 2:00pm-4:00pm</li>
-                <li><strong>Location:</strong> Barton Hall</li>
-            </ul>
-        </div>
-
     </div>
 
     <!--how to schedule events with us-->
